<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/frame_top"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_menu"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_subtitle"
            android:textColor="@color/light_blue"
            android:textStyle="bold"/>

        <ImageButton
            android:contentDescription="Fleche_retour"
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:src="@drawable/back_icon_blue"
            android:background="@color/blue"
            android:paddingTop="2dp"
            android:layout_marginTop="2dp"/>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/button_menu_shape"
                android:layout_centerVertical="true"
                android:text="@string/list_manage"
                android:textColor="@color/light_blue"
                android:padding="5dp"
                android:id="@+id/manage_list_button"
            />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/button_menu_shape"
                android:layout_toRightOf="@+id/manage_list_button"
                android:layout_toEndOf="@+id/manage_list_button"
                android:layout_alignTop="@+id/manage_list_button"
                android:text="@string/list_create"
                android:textColor="@color/light_blue"
                android:padding="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:id="@+id/create_list_button"
            />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>