<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/frame_top"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filling"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_subtitle"
            android:textColor="@color/light_blue"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:src="@drawable/back_icon_blue"
            android:background="@color/blue"
            android:paddingTop="2dp"
            android:layout_marginTop="2dp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word1"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word2"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word1"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word2"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word1"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word2"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word1"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word2"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word1"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/text_box"
                android:padding="5dp"
                android:hint="@string/word2"
                android:textColorHint="@color/grey"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_menu_shape"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/another"
                android:textColor="@color/light_blue"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_menu_shape"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/submit"
                android:textColor="@color/light_blue"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>